--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.1.1",
     "@schematics/angular": "^9.1.0",
     "bootstrap": "4.1.1",
+    "bootswatch": "^5.1.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-toastr": "^14.1.3",
