Adding member caching to the frontend, remembering the filters for a user in the service.

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,7 +4,13 @@
     "DefaultConnection":"Data source=dateseeker.db"
   },
 
-  "TokenKey":"super secret unguessable key",
+  "TokenKey": "super secret unguessable key",
+
+  "CloudinarySettings": {
+    "CloudName": "pavelquevedo",
+    "ApiKey": "234227596461632",
+    "ApiSecret": "B3rrCFFQsECQ7LXd_-RzCoZkXak"
+  },
 
   "Logging": {
     "LogLevel": {
