Adding new migrations for postgres database, heroku configuration and wwwroot for static content (frontend build).

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings" :{
-    "DefaultConnection":"Data source=dateseeker.db"
+    "DefaultConnection":"Server=localhost; Port=5432; User Id=appuser; Password=pass; Database=dateseeker"
   },
 
   "TokenKey": "super secret unguessable key",
